--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('images/background.webp'); 
+    background-image: url('../images/background.webp'); 
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -72,7 +72,9 @@ body {
 .button.score-board:hover {
     background-color: #28a428; 
 }
-
+a {
+    text-decoration: none; 
+}
 
 
 .profile-content {
